# Oxide64

./: Cargo.toml  linker.ld  makefile  test.sh
.cargo/: config.toml
isodir/boot/grub/: grub.cfg
src/: boot.asm  gdt.rs  graphics.rs  interrupts.rs  lib.rs  long_mode.asm  serial.rs  time.rs
src/assets/: diddyblud.qoi
